# otterfall

./: .clinerules  .envrc  .eslintrc.cjs  .gitignore  .mcp.json  .npmrc  .prettierignore  .prettierrc  .replit  AGENTS.md  AGENTS.md.bak  biome.json  drizzle.config.ts  eslint.config.js  game_dev_crew.py  game_dev_crew_advanced.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  process-compose.yaml  projectBrief.md  project_brief.md  projectbrief.md  pyproject.toml  replit.md  replit.md.backup  tsconfig.json  vitest.config.ts  world_design_output.md
python/: .clinerules  AGENTS.md  README.md  pyproject.toml
python/.ruler/: AGENTS.md  testing_conventions.md
python/crew_agents/: AGENTS.md  README.md  crewbase.yaml  pyproject.toml  run_batch1.py
python/crew_agents/.ruler/: asset_integration_workflow.yaml  batch_generation_workflow.yaml  dfu_migration_workflow.yaml  documentation_workflow.yaml  hitl_review_workflow.yaml  meshy_asset_workflow.yaml  performance_optimization_workflow.yaml  prototype_to_production_workflow.yaml  reusable_workflows.md  tdd_prototype_workflow.yaml  workflow_configuration.md
python/crew_agents/knowledge/ecs_patterns/: components.md
python/crew_agents/knowledge/game_components/: architecture.md
python/crew_agents/knowledge/rendering_patterns/: r3f_components.md
python/crew_agents/src/crew_agents/: __init__.py  __main__.py  config.py  crew.py  main.py  run_flow.py
python/crew_agents/src/crew_agents/adapters/: __init__.py  base.py  conport_adapter.py  database_adapter.py  docs_adapter.py  filesystem_adapter.py  git_adapter.py  github_adapter.py  knowledge_adapter.py  playwright_adapter.py  vite_adapter.py
python/crew_agents/src/crew_agents/config/: __init__.py  agents.yaml  llm.py  tasks.yaml
python/crew_agents/src/crew_agents/crews/: __init__.py
python/crew_agents/src/crew_agents/crews/asset_pipeline/: __init__.py  asset_crew.py
python/crew_agents/src/crew_agents/crews/creature_design/: __init__.py  creature_design_crew.py
python/crew_agents/src/crew_agents/crews/ecs_implementation/: __init__.py  ecs_crew.py
python/crew_agents/src/crew_agents/crews/game_builder/: __init__.py  game_builder_crew.py
python/crew_agents/src/crew_agents/crews/gameplay_design/: __init__.py  gameplay_design_crew.py
python/crew_agents/src/crew_agents/flows/: README.md  __init__.py  asset_generation_flow.py  asset_integration_flow.py  batch_generation_flow.py  game_design_flow.py  hitl_review_flow.py  implementation_flow.py  meshy_asset_flow.py  prototype_to_production_flow.py  tdd_prototype_flow.py
python/crew_agents/src/crew_agents/tools/: __init__.py  file_tools.py
python/mesh_toolkit/: .clinerules  AGENTS.md  pyproject.toml
python/mesh_toolkit/src/mesh_toolkit/: __init__.py  animations.py  client.py  jobs.py  logging.py  models.py
python/mesh_toolkit/src/mesh_toolkit/api/: __init__.py  base_client.py
python/mesh_toolkit/src/mesh_toolkit/catalog/: __init__.py  animations.json
python/mesh_toolkit/src/mesh_toolkit/persistence/: __init__.py  repository.py  schemas.py  utils.py
python/mesh_toolkit/src/mesh_toolkit/services/: __init__.py  animation_service.py  factory.py  retexture_service.py  rigging_service.py  text3d_service.py  utils.py
python/mesh_toolkit/src/mesh_toolkit/webhooks/: __init__.py  handler.py  schemas.py
python/scripts/: generate_assets.py  generate_species_pipeline.py  health_check.py  monitor_crew_progress.py  run_webhook_server.py  test_flows.py  update_meshy_catalog.py  webhook_proxy.py
python/tests/: __init__.py  conftest.py
python/tests/integration/: __init__.py  test_otter_pipeline.py  test_webhook_recording.py
python/tests/integration/cassettes/: TestOtterPipeline.test_1_text_to_3d_otter.yaml  TestOtterPipeline.test_2_rigging_otter.yaml  TestOtterPipeline.test_3_animation_attack_otter.yaml  TestOtterPipeline.test_4_retexture_otter_grey.yaml
python/tests/integration/fixtures/glb/: otter_sculptured.glb
python/tests/integration/fixtures/webhooks/: animation_success.json  retexture_success.json  rigging_success.json  text3d_success.json
python/tests/integration/webhook_server/: README.md  __init__.py  app.py  fixtures.py
python/tests/unit/: __init__.py  test_animation_catalog.py  test_animation_service.py  test_base_client.py  test_repository.py  test_retexture_service.py  test_rigging_service.py  test_text3d_service.py
python/tests/unit/crew_agents/: test_crews.py  test_game_builder.py  test_git_adapter.py
(+163 files in other folders)
