[project]
name = "rivermarsh-tooling"
version = "0.1.0"
description = "Rivermarsh dual-language monorepo tooling workspace"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-vcr>=1.0.2",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
]

[tool.uv.workspace]
members = ["python/mesh_toolkit", "python/crew_agents"]
