[project]
name = "rivermarsh-python"
version = "0.1.0"
description = "Python workspace for Rivermarsh game development tools"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["mesh_toolkit", "crew_agents"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
