[project]
name = "crew-agents"
version = "0.2.0"
description = "CrewAI agents for Rivermarsh game development - specialized crews for world design, creature design, gameplay, ECS implementation, rendering, and asset generation"
requires-python = ">=3.13"
dependencies = [
    "crewai[tools]>=1.5.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.12.4",
    "mesh-toolkit",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
]

[project.scripts]
crew_agents = "crew_agents.main:main"
# Legacy entry points (deprecated)
run_crew = "crew_agents.crew:run"
train_crew = "crew_agents.crew:train"
replay_crew = "crew_agents.crew:replay"
test_crew = "crew_agents.crew:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crew_agents"]

[tool.uv.sources]
mesh-toolkit = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
