[project]
name = "mesh-toolkit"
version = "0.1.0"
description = "Meshy SDK for game asset generation"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "pydantic>=2.0.0",
    "rich>=14.2.0",
    "playwright>=1.56.0",
]

[project.optional-dependencies]
test = [
    "fastapi>=0.115.0",
    "uvicorn>=0.38.0",
    "pyngrok>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh_toolkit"]
